--- a/src/Services/Pagination/Pagination.module.scss
+++ b/src/Services/Pagination/Pagination.module.scss
@@ -7,11 +7,13 @@
 .display_none {
     display: none !important;
 }
+.home_product_list_wrap {
+    width: 100%;
+}
 .home_product_list {
     width : 100%;
     min-height: 600px;
     display: flex;
-    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
     padding: 0;
