--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
 :root {
-    --primary: #fe2c55;
+    --primary: #4e7661;
+    --primary-hover: #426552;
     --default-layout-header-height: 70px;
     --default-layout-header-width: 90%;
 }
