--- a/src/pages/ProductDetail/ProductDetail.module.scss
+++ b/src/pages/ProductDetail/ProductDetail.module.scss
@@ -10,12 +10,13 @@
     flex-direction: row;
     width: var(--default-layout-header-width);
     flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 600px;
 }
 .product_img{
-    width: 40%;    
-    padding-left: 20%;
-    padding-right: 10%;
+    width: 500px;    
     height: 500px;
+    margin: 0px 30px 30px 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,10 +30,9 @@
 .product_info {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    width: 800px;
     flex-wrap: wrap;
     padding-left: 5%;
-    padding-right: 10%;
     height: 500px;
     display: flex;
 
@@ -43,10 +43,9 @@
 }
 
 .product_info_title {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 2em;
-    margin-top: 15px;
-    
+    margin-top: 10px;
 }
 .product_info_quantity {
     color: #7e7e7e;
@@ -65,9 +64,9 @@
     border: none;
     padding: 8px;
     margin-right: 150px;
-    background-color: #4e7661;;
+    background-color: var(--primary);
     &:hover {
         cursor: pointer;
-        background-color: #426552;
+        background-color:var(primary-hover);
     }
 }
