--- a/src/pages/Shop/Shop.module.scss
+++ b/src/pages/Shop/Shop.module.scss
@@ -1,4 +1,5 @@
 // List product
+
 .shop_product {
     margin-top: 60px;
     width: 100%;
@@ -6,9 +7,9 @@
     justify-content: center;
 }
 .shop_product_container {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    width:  var(--default-layout-header-width);
 }
 .shop_product_header {
     margin-left: calc(90px/10);
