--- a/src/pages/Store/Store.module.scss
+++ b/src/pages/Store/Store.module.scss
@@ -17,22 +17,23 @@
     margin-bottom: 30px;
 }
 .Shoper_info_left {
+    min-width: 500px;
     display: flex;
     flex-direction: column;
-    width: 390px;
-    height: 135px;
-    background-color: #393939;
+    height: 200px;
     padding: 10px 20px 10px 20px;
     border-radius: 5px;
-    color: #fff;
+    justify-content: space-between;
 }
 .Shoper_info_left_avt {
     display: flex;
     flex-direction: row;
+
 }
 .Shoper_info_left_avt img{
     border: 2px solid #7e7e7e;
     border-radius: 50%;
+    margin-right: 20px;
 }
 
 .Shoper_info_left_avt_item {
@@ -57,26 +58,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #fff;
+    border: 1px solid #7e7e7e;
     width: 48%;
     padding: 5px 0px;
-    height: 1.5em;
+    height: 2em;
+    cursor: pointer;
+}
+.following {
+    border: none;
+    background-color: var(--primary);
+    color: #fff;
 }
 
-.Shoper_info_right {
-    width: 600px;
-    height: 135px;
-    padding-left: 40px;
-    display: flex;
-    flex-direction: row;
-
-}
-.Shoper_info_right_item p {
-    width: 100%;
-    padding: 10px 0px;
-    margin: 0;
-    font-size: 1em;
-}
 
 // List product
 .Shoper_product {
